--- a/pages/modal/modal.html
+++ b/pages/modal/modal.html
@@ -3,12 +3,12 @@
     <head>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../../assets/css/main.css">
-        <link rel="stylesheet" href="../template-components/template-page/template-page.css">
-        <link rel="stylesheet" href="../template-components/template-header/template-header.css">
-        <link rel="stylesheet" href="../template-components/template-main/template-main.css">
-        <link rel="stylesheet" href="../template-components/template-sidebar/template-sidebar.css">
-        <link rel="stylesheet" href="../template-components/template-component/template-component.css">
-        <link rel="stylesheet" href="../template-components/template-footer/template-footer.css">
+        <link rel="stylesheet" href="../../template-components/template-page/template-page.css">
+        <link rel="stylesheet" href="../../template-components/template-header/template-header.css">
+        <link rel="stylesheet" href="../../template-components/template-main/template-main.css">
+        <link rel="stylesheet" href="../../template-components/template-sidebar/template-sidebar.css">
+        <link rel="stylesheet" href="../../template-components/template-component/template-component.css">
+        <link rel="stylesheet" href="../../template-components/template-footer/template-footer.css">
         <link rel="stylesheet" href="../../components/icons/logo.css">
         <link rel="stylesheet" href="../../components/icons/modal.css">
         <link rel="stylesheet" href="../../components/modal/modal.css">
@@ -68,7 +68,8 @@
                                     <div class="template-sidebar__menu template-sidebar__menu_burger">
                                         <a href="../modal/modal.html" class="template-sidebar__item .template-sidebar__item_burger">Modal</a>
                                         <a href="../tooltip/tooltip.html" class="template-sidebar__item .template-sidebar__item_burger">Tooltip</a>
-                                        <a href="../avatar/avatar.html" class="template-sidebar__item .template-sidebar__item_burger">Avatar</a>
+                                        <a href="../progress-bar/progress-bar.html"
+                                           class="template-sidebar__item .template-sidebar__item_burger">Progress bar</a>
                                         <a href="../calendar/calendar.html" class="template-sidebar__item .template-sidebar__item_burger">Calendar</a>
                                         <a href="../histogram/histogram.html" class="template-sidebar__item .template-sidebar__item_burger">Histogram</a>
                                         <a href="../form-elements/form-elements.html" class="template-sidebar__item .template-sidebar__item_burger">Custom form elements</a>
@@ -112,7 +113,7 @@
                         <div class="template-sidebar__menu">
                             <a href="../modal/modal.html" class="template-sidebar__item">Modal</a>
                             <a href="../tooltip/tooltip.html" class="template-sidebar__item">Tooltip</a>
-                            <a href="../avatar/avatar.html" class="template-sidebar__item">Avatar</a>
+                            <a href="../progress-bar/progress-bar.html" class="template-sidebar__item">Progress bar</a>
                             <a href="../calendar/calendar.html" class="template-sidebar__item">Calendar</a>
                             <a href="../histogram/histogram.html" class="template-sidebar__item">Histogram</a>
                             <a href="../form-elements/form-elements.html" class="template-sidebar__item">Custom form elements</a>
@@ -279,6 +280,6 @@
         </div>
         <script src="../../scripts/theme-changer.js"></script>
         <script src="../../scripts/burger-menu.js"></script>
-        <script src="./index.js"></script>
+        <script src="../../scripts/modal.js"></script>
     </body>
 </html>
