Fixed form-elements in preview

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
                                     <div class="card__type">Template</div>
                                 </div>
                             </a>
+
                             <a href="pages/form-elements/form-elements.html" class="card card__preview">
                                 <div class="card__body">
                                     <div class="form-elements form-elements_preview">
@@ -326,7 +327,7 @@
                                                             <use xlink:href="./assets/images/icons.svg#radio-icon"></use>
                                                         </svg>
                                                     </div>
-                                                    <div class="radio__label">
+                                                    <div class="radio__label radio__label_preview">
                                                         Default
                                                     </div>
                                                 </div>
@@ -339,7 +340,7 @@
                                                             <use xlink:href="./assets/images/icons.svg#radio-icon"></use>
                                                         </svg>
                                                     </div>
-                                                    <div class="radio__label">
+                                                    <div class="radio__label radio__label_preview">
                                                         Selected
                                                     </div>
                                                 </div>
@@ -352,7 +353,7 @@
                                                             <use xlink:href="./assets/images/icons.svg#radio-icon"></use>
                                                         </svg>
                                                     </div>
-                                                    <div class="radio__label">
+                                                    <div class="radio__label radio__label_preview">
                                                         Disabled
                                                     </div>
                                                 </div>
@@ -366,6 +367,7 @@
                                     <div class="card__type">Template</div>
                                 </div>
                             </a>
+
                             <a href="pages/histogram/histogram.html" class="card card__preview">
                                 <div class="card__body">
                                     <div class="histogram histogram_preview">
@@ -663,6 +665,7 @@
                     </div>
                     <div class="tabs__content tabs__content_template">
                         <div class="container preview__container">
+
                             <a href="pages/form-elements/form-elements.html" class="card card__preview">
                                 <div class="card__body">
                                     <div class="form-elements form-elements_preview">
@@ -709,7 +712,8 @@
                                         </div>
                                         <div class="form-elements__group form-elements__group_preview">
                                             <label class="radio">
-                                                <input type="radio" name="preview" class="radio__input">
+                                                <input type="radio" name="template"
+                                                       class="radio__input">
                                                 <div class="radio__state">
                                                     <div class="radio__control">
                                                         <svg class="radio__icon">
@@ -722,7 +726,7 @@
                                                 </div>
                                             </label>
                                             <label class="radio">
-                                                <input type="radio" name="preview" class="radio__input" checked>
+                                                <input type="radio" name="template" class="radio__input" checked>
                                                 <div class="radio__state">
                                                     <div class="radio__control">
                                                         <svg class="radio__icon">
@@ -735,7 +739,7 @@
                                                 </div>
                                             </label>
                                             <label class="radio">
-                                                <input type="radio" name="preview" class="radio__input" disabled>
+                                                <input type="radio" name="template" class="radio__input" disabled>
                                                 <div class="radio__state">
                                                     <div class="radio__control">
                                                         <svg class="radio__icon">
@@ -756,6 +760,7 @@
                                     <div class="card__type">Template</div>
                                 </div>
                             </a>
+
                             <a href="pages/progress-bar/progress-bar.html" class="card card__preview">
                                 <div class="card__body">
                                     <div class="progress-bar progress-bar_preview">
