Edited font-size for progress bar preview

--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                             <a href="pages/progress-bar/progress-bar.html" class="card card__preview">
                                 <div class="card__body">
                                     <div class="progress-bar progress-bar_preview">
-                                        <div class="value-container"></div>
+                                        <div class="value-container value-container_preview"></div>
                                     </div>
                                 </div>
                                 <div class="separating-line"></div>
@@ -764,7 +764,7 @@
                             <a href="pages/progress-bar/progress-bar.html" class="card card__preview">
                                 <div class="card__body">
                                     <div class="progress-bar progress-bar_preview">
-                                        <div class="value-container"></div>
+                                        <div class="value-container value-container_preview"></div>
                                     </div>
                                 </div>
                                 <div class="separating-line"></div>
